sorted/tests/07-unrecognized-pattern.stderr
error: unsupported by #[remain::sorted]
  --> $DIR/07-unrecognized-pattern.rs:12:9
   |
12 |         [] => Some(0),
   |         ^^
